--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ button {
 
 :root {
   /* font options */
-  font-family: "Albert Sans", system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Albert Sans', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.3;
   font-weight: 400;
 
@@ -82,6 +82,8 @@ button {
   --accent1: var(--accent1-light);
   --accent2: var(--accent2-light);
   color-scheme: light;
+
+  --custom-color: var(--primary);
 }
 
 body {
@@ -128,25 +130,86 @@ h3,
 p {
   max-width: 60ch;
 }
-[data-color="primary"] {
+
+@media (prefers-reduced-motion) {
+  *,
+  *::after,
+  *::before {
+    animation-delay: -1ms !important;
+    animation-duration: 1ms !important;
+    animation-iteration-count: 1 !important;
+    background-attachment: scroll !important;
+    scroll-behavior: auto !important;
+    transition-delay: 0s !important;
+    transition-duration: 0s !important;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bkg: var(--bkg-dark);
+    --text: var(--text-dark);
+    --primary: var(--primary-dark);
+    --accent1: var(--accent1-dark);
+    --accent2: var(--accent2-dark);
+    color-scheme: dark;
+  }
+}
+
+[data-theme='light'] {
+  --bkg: var(--bkg-light);
+  --text: var(--text-light);
+  --primary: var(--primary-light);
+  --accent1: var(--accent1-light);
+  --accent2: var(--accent2-light);
+  color-scheme: light;
+}
+
+[data-theme='dark'] {
+  --bkg: var(--bkg-dark);
+  --text: var(--text-dark);
+  --primary: var(--primary-dark);
+  --accent1: var(--accent1-dark);
+  --accent2: var(--accent2-dark);
+  color-scheme: dark;
+}
+
+[data-motion='true'] *,
+[data-motion='true'] *::before,
+[data-motion='true'] *::after {
+  animation-delay: -1ms !important;
+  animation-duration: 1ms !important;
+  animation-iteration-count: 1 !important;
+  background-attachment: scroll !important;
+  scroll-behavior: auto !important;
+  transition-delay: 0s !important;
+  transition-duration: 0s !important;
+}
+
+[data-round='true'] {
+  --round-full: 100vmax;
+  --round-md: 0.5rem;
+}
+
+[data-color='primary'] {
   color: var(--primary);
 }
-[data-color="accent1"] {
+[data-color='accent1'] {
   color: var(--accent1);
 }
-[data-color="accent2"] {
+[data-color='accent2'] {
   color: var(--accent2);
 }
-[data-bkg="primary"] {
+[data-bkg='primary'] {
   background-color: var(--primary);
 }
-[data-bkg="accent2"] {
+[data-bkg='accent2'] {
   background-color: var(--accent2);
 }
-[data-align="right"] {
+[data-align='right'] {
   text-align: right;
 }
-[data-fs="2xl"] {
+[data-fs='2xl'] {
   font-size: var(--fs-2xl);
 }
 .sr-only {
@@ -168,7 +231,7 @@ p {
 
 .headshot {
   border-radius: var(--round-full);
-  border: 6px solid var(--accent2);
+  border: 6px solid var(--custom-color);
 }
 
 .wave {
@@ -216,7 +279,7 @@ p {
 .btn {
   --btn-bkg: var(--primary);
   --btn-color: var(--bkg);
-  --btn-bkg: var(--accent1);
+  --btn-bkg: var(--custom-color);
   display: grid;
   place-items: center;
   max-width: fit-content;
@@ -226,8 +289,7 @@ p {
   line-height: 1;
   text-decoration: none;
   border-radius: var(--round-md);
-  transition: box-shadow 0.2s var(--ease-elastic),
-    opacity 0.2s var(--ease-elastic);
+  transition: box-shadow 0.2s var(--ease-elastic), opacity 0.2s var(--ease-elastic);
 }
 
 .btn:focus {
@@ -249,8 +311,8 @@ section {
 
 .cta-wrapper {
   background-color: var(--bkg);
-  border-top: 6px solid var(--accent2);
-  border-bottom: 6px solid var(--accent2);
+  border-top: 6px solid var(--custom-color);
+  border-bottom: 6px solid var(--custom-color);
   padding: var(--space-xl) 0;
   display: grid;
   place-items: center;
@@ -265,7 +327,7 @@ section {
 }
 
 .cta h2 {
-  color: var(--accent2);
+  color: var(--custom-color);
 }
 
 .cta > div {
@@ -273,7 +335,7 @@ section {
 }
 
 .cta .btn {
-  --btn-bkg: var(--accent2);
+  --btn-bkg: var(--custom-color);
 }
 
 .cta form {
@@ -288,25 +350,49 @@ section {
 
 .cta input {
   appearance: none;
-  border: 2px solid var(--accent2);
+  border: 2px solid var(--custom-color);
   border-radius: var(--round-md);
   padding: 3px var(--space-2xs);
 }
 
 .cta input::placeholder {
-  color: var(--accent2);
+  color: var(--custom-color);
   opacity: 0.5;
 }
 
 .cta input:focus {
   outline: 2px solid transparent;
-  box-shadow: 0 0 0 3px var(--accent2);
+  box-shadow: 0 0 0 3px var(--custom-color);
 }
 
 .cta label {
   font-size: var(--fs-sm);
   text-transform: uppercase;
-  color: var(--accent2);
+  color: var(--custom-color);
+}
+
+#sound-check {
+  display: none;
+}
+#sound-toggle {
+  display: none;
 }
 
 /* SETTINGS SECTION */
+
+.setting-wrapper {
+  display: grid;
+  grid-gap: var(--space-sm);
+  margin-inline: auto;
+}
+
+.setting {
+  display: flex;
+  gap: var(--space-sm);
+}
+
+.setting-toggle {
+}
+
+.setting-radio {
+}
